--- a/App.config
+++ b/App.config
@@ -22,7 +22,7 @@
         <add name="REDES.My.MySettings.INFORME_INIDICESConnectionString"
             connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=G:\OPERACIONES\BD_INDICE\Indices.accdb"
             providerName="System.Data.OleDb" />
-        <add name="REDES.My.MySettings.OBRAS_MDUConnectionString" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=G:\OPERACIONES\BD_OBRAS\OBRAS_MDU.accdb"
+        <add name="REDES.My.MySettings.EDIFICIOConnectionString" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=G:\OPERACIONES\BD_FTTHMDU\EDIFICIO.accdb"
             providerName="System.Data.OleDb" />
     </connectionStrings>
     <startup>
