--- a/App.config
+++ b/App.config
@@ -24,6 +24,8 @@
             providerName="System.Data.OleDb" />
         <add name="REDES.My.MySettings.EDIFICIOConnectionString" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=G:\OPERACIONES\BD_FTTHMDU\EDIFICIO.accdb"
             providerName="System.Data.OleDb" />
+        <add name="REDES.My.MySettings.FIBRAConnectionString" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=G:\OPERACIONES\BD_FIBRA\FIBRA.accdb"
+            providerName="System.Data.OleDb" />
     </connectionStrings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
@@ -44,6 +46,9 @@
             </setting>
             <setting name="PRUEBA" serializeAs="String">
                 <value />
+            </setting>
+            <setting name="VALOR_NODO" serializeAs="String">
+                <value>R</value>
             </setting>
         </REDES.My.MySettings>
     </userSettings>
